--- a/LOLWildRift.Web/Views/Champions/Create.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Create.cshtml
@@ -52,7 +52,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="LANE" class="control-label"></label>
-                <select asp-for="RECCOMENDED_LANE_ID"
+                <select asp-for="RECOMMENDED_LANE_ID"
                         asp-items="@(new SelectList((List<RecommededLaneEntity>)@ViewData["lanes"],"ID","LANE"))"
                         class="form-control"></select>
                 <span asp-validation-for="LANE" class="text-danger"></span>
