--- a/LOLWildRift.Web/Views/Champions/Details.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Details.cshtml
@@ -60,10 +60,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LANE)
         </dd>
-     
+
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <button type="button" class="btn btn-outline-warning"
+            onclick="location.href='@Url.Action("Edit", "Champions", new { id =  Model.ID })'">
+        Edit
+    </button>
+    <button type="button" class="btn btn-outline-info" onclick="location.href='@Url.Action("Index", "Champions")'">Back to List</button>
 </div>
