--- a/LOLWildRift.Web/Views/Shared/_Layout.cshtml
+++ b/LOLWildRift.Web/Views/Shared/_Layout.cshtml
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
-    
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LOLWildRift.Web</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Champions" asp-action="Index">LOLWildRift.Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,9 +25,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Champions" asp-action="Index">Home</a>
                         </li>
-                        @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>*@
+
+                        <li class="nav-item dropdown ml-auto" style="stroke-dasharray:10px">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Admin
+                            </a>
+                            <div class="dropdown-menu fa-pull-right" aria-labelledby="navbarDropdownMenuLink">
+                                @if (!String.IsNullOrEmpty(ViewData["Login"]?.ToString()))
+                                {
+                                    <a class="dropdown-item" asp-controller="Champions" asp-action="Logout">Logout</a>
+                                }
+                                else
+                                {
+                                    <a class="dropdown-item" asp-controller="Champions" asp-action="Login">Login</a>
+                                }
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
