--- a/LOLWildRift.Web/Views/Champions/Role.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Role.cshtml
@@ -2,14 +2,18 @@
 
 @{
     ViewData["Title"] = "Role";
+    ViewData["Login"] = ViewData["_authen"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Role</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="col-md-6">
+    <button type="button" class="btn btn-outline-primary"
+            onclick="location.href='@Url.Action("RoleCreate", "Champions")'">
+        Create champion
+    </button>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -36,9 +40,9 @@
                 <td>
                     <button type="button" class="btn btn-outline-warning btnEdit" id="btnEdit_@item.ID" style="width:50%; height:auto;"
                             data-id="@item.ID">
-                        <i class="far fa-edit"  style="width:auto;height:auto"></i>
+                        <i class="far fa-edit" style="width:auto;height:auto"></i>
                     </button>
-                    <button type="button" class="btn btn-outline-danger" style="width: 50%; height: auto"
+                    <button type="button" class="btn btn-outline-danger btnDelete" style="width: 50%; height: auto"
                             id="btnDelete_@item.ID" data-id="@item.ID">
                         <i class="fa fa-trash" style="width:auto;height:auto"></i>
                     </button>
@@ -50,12 +54,40 @@
                             data-id="@item.ID">
                         Cancle
                     </button>
-
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="container">
+    <!-- The Modal -->
+    <div class="modal fade" id="deleteModal">
+        <div class="modal-dialog modal-md">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Are you sure you want to delete this?</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <input type="hidden" id="modalLblID" />
+                    <label id="modalLblName"></label>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="btnAcceptDelete">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 @section scripts{
     <script type="text/javascript">
@@ -65,19 +97,53 @@
                 $('#btnEdit_' + id).hide();
                 $('#btnDelete_' + id).hide();
                 $('#lblName_' + id).hide();
-
                 $('#txtName_' + id).show();
                 $('#btnApply_' + id).show();
                 $('#btnCancle_' + id).show();
-
             });
 
             $('.btnApply').click(function () {
-                EditOrCancle($(this).data('id'));
+                var url = "/Champions/RoleEdit";
+                var id = $(this).data('id');
+                var role = $('#txtName_' + id).val();
+                $.ajax({
+                    type: "PUT",
+                    url: url,
+                    data: { id: id, role: role },
+                    success: function () {
+                        //console.log("success");
+                        window.location.reload();
+                        EditOrCancle(id);
+                    },
+                    error: function () {
+                        //console.log("error!");
+                    }
+                });
             });
 
             $('.btnCancle').click(function () {
                 EditOrCancle($(this).data('id'));
+            });
+
+            $('.btnDelete').click(function () {
+                var id = $(this).data('id');
+                var role = $('#txtName_' + id).val();
+                $('#modalLblID').val(id);
+                $('#modalLblName').text(role);
+                $('#deleteModal').modal('show');
+            });
+
+            $('#btnAcceptDelete').click(function () {
+                var url = "/Champions/RoleDelete";
+                var id = $('#modalLblID').val();
+                $.ajax({
+                    type: "DELETE",
+                    url: url,
+                    data: { id: id },
+                    success: function () {
+                        window.location.reload();
+                    }
+                });
             });
 
             function EditOrCancle(id) {
@@ -88,6 +154,8 @@
                 $('#lblName_' + id).show();
                 $('#txtName_' + id).hide();
             }
+
+
         });
     </script>
 }
