--- a/LOLWildRift.Web/Views/Champions/Create.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Create.cshtml
@@ -70,7 +70,7 @@
             <div class="form-group">
                 <label asp-for="LANE" class="control-label"></label>
                 <select asp-for="RECOMMENDED_LANE_ID"
-                        asp-items="@(new SelectList((List<RecommededLaneEntity>)@ViewData["lanes"],"ID","LANE"))"
+                        asp-items="@(new SelectList((List<RecommendedLaneEntity>)@ViewData["lanes"],"ID","LANE"))"
                         class="form-control"
                         id="ddlLanes"></select>
                 <span asp-validation-for="LANE" class="text-danger"></span>
