--- a/LOLWildRift.Web/Views/Champions/Edit.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Edit.cshtml
@@ -74,7 +74,7 @@
             <div class="form-group">
                 <label asp-for="LANE" class="control-label"></label>
                 <select asp-for="RECOMMENDED_LANE_ID"
-                        asp-items="@(new SelectList((List<RecommededLaneEntity>)@ViewData["lanes"],"ID","LANE",Model.RECOMMENDED_LANE_ID))"
+                        asp-items="@(new SelectList((List<RecommendedLaneEntity>)@ViewData["lanes"],"ID","LANE",Model.RECOMMENDED_LANE_ID))"
                         class="form-control" id="ddlLanes"></select>
                 <span asp-validation-for="LANE" class="text-danger"></span>
             </div>
