--- a/LOLWildRift.Web/Views/Champions/Index.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row" style="margin-bottom:10px;">
     <div class="col-md-6">
-        <button type="button" class="btn btn-outline-primary"
+        <button type="button" class="btn btn-outline-primary" id="btnCreate" style="display:none"
                 onclick="location.href='@Url.Action("Create", "Champions")'">
             Create champion
         </button>
@@ -165,13 +165,15 @@
             });
 
         $(document).ready(function() {
-              @if(ViewData["_authen"].ToString() != "") { 
+              @if(ViewData["_authen"].ToString() != "") {
               <text>
             /*ID = Single
               Class = Multiple */
               $('.btnEdit').show();
+              $('#btnCreate').show();
               </text>
-               }
+              }
+
             });
 
     </script>
