--- a/LOLWildRift.Web/Views/Champions/Create.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Create.cshtml
@@ -2,8 +2,9 @@
 
 @{
     ViewData["Title"] = "Create";
+    ViewData["Login"] = ViewData["_authen"];
     Layout = "~/Views/Shared/_Layout.cshtml";
-    
+
 }
 
 <h1>Create</h1>
