--- a/LOLWildRift.Web/Views/Champions/Details.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Details.cshtml
@@ -1,6 +1,8 @@
 ﻿@model LOLWildRift.Web.Models.ChampionsEntity
 
 @{
+
+    ViewData["Login"] = ViewData["_authen"];
     ViewData["Title"] = "Details";
 }
 
