--- a/LOLWildRift.Web/Views/Champions/Edit.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    ViewData["Login"] = ViewData["_authen"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
