--- a/LOLWildRift.Web/Views/Champions/Role.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Role.cshtml
@@ -29,7 +29,7 @@
             <tr>
                 <td>
                     <label id="lblName_@item.ID"> @Html.DisplayFor(modelItem => item.ROLE_NAME)</label>
-                    <input id="txtName_@item.ID" type="text" value="@Html.DisplayFor(modelItem => item.ROLE_NAME)" style="display:none" />
+                    <input id="txtName_@item.ID" type="text" value="@Html.DisplayFor(modelItem => item.ROLE_NAME)" style="display:none"/>
                 </td>
                 <td>
                     <button type="button" class="btn btn-outline-warning btnEdit" id="btnEdit_@item.ID" style="width:50%; height:auto;"
@@ -104,19 +104,24 @@
                 var url = "/Champions/RoleEdit";
                 var id = $(this).data('id');
                 var role = $('#txtName_' + id).val();
-                $.ajax({
-                    type: "PUT",
-                    url: url,
-                    data: { id: id, role: role },
-                    success: function () {
-                        //console.log("success");
-                        window.location.reload();
-                        EditOrCancle(id);
-                    },
-                    error: function () {
-                        //console.log("error!");
-                    }
-                });
+                if (role == '') {
+                    alert('Lane is required!!!');
+                }
+                else {
+                    $.ajax({
+                        type: "PUT",
+                        url: url,
+                        data: { id: id, role: role },
+                        success: function () {
+                            //console.log("success");
+                            window.location.reload();
+                            EditOrCancle(id);
+                        },
+                        error: function () {
+                            //console.log("error!");
+                        }
+                    });
+                }
             });
 
             $('.btnCancle').click(function () {
