--- a/LOLWildRift.Web/Views/Champions/Role.cshtml
+++ b/LOLWildRift.Web/Views/Champions/Role.cshtml
@@ -105,7 +105,7 @@
                 var id = $(this).data('id');
                 var role = $('#txtName_' + id).val();
                 if (role == '') {
-                    alert('Lane is required!!!');
+                    alert('role is required!!!');
                 }
                 else {
                     $.ajax({
